--- a/Lista_Sequencial/Lista_Sequencial.cbp
+++ b/Lista_Sequencial/Lista_Sequencial.cbp
@@ -31,12 +31,16 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="ListaLinearSequencial.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="TestesIniciais.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
